--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,9 +18,6 @@
         android:clickable="true"
         android:focusable="true"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircularImageView" />
-
-
-
 
     <TextView
         android:id="@+id/user_profile_name"
@@ -47,6 +45,4 @@
         android:layout_weight="1"
         tools:listitem="@layout/fragment_ive_played" />
 
-
 </LinearLayout>
-
