--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,25 +3,73 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home">
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.gamevault.ui.home.HomeFragment1"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home1">
-
         <action
-            android:id="@+id/actionNavHomeToGameDetailsFragment"
+            android:id="@+id/action_nav_home_to_gameDetailsFragment"
             app:destination="@id/gameDetailsFragment" />
-
     </fragment>
 
     <fragment
         android:id="@+id/gameDetailsFragment"
         android:name="com.example.gamevault.ui.GameDetails.GameDetailsFragment"
-        android:label="@string/menu_game_details"
+        android:label="Game Details"
         tools:layout="@layout/fragment_game_details">
+        <argument
+            android:name="game"
+            app:argType="com.example.gamevault.model.Gamemodel" />
     </fragment>
 
+    <fragment
+        android:id="@+id/nav_im_playing"
+        android:name="com.example.gamevault.ui.EmProgresso.EmProgresso"
+        android:label="Em Progresso"
+        tools:layout="@layout/fragment_em_progresso_list">
+        <action
+            android:id="@+id/action_nav_em_progresso_to_gameDetailsFragment"
+            app:destination="@id/gameDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_want_to_playing"
+        android:name="com.example.gamevault.ui.NaLista.NaLita"
+        android:label="Na Lista"
+        tools:layout="@layout/fragment_na_lita">
+        <action
+            android:id="@+id/action_nav_na_lista_to_gameDetailsFragment"
+            app:destination="@id/gameDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_Ive_played"
+        android:name="com.example.gamevault.ui.Finalizado.Finalizado"
+        android:label="Finalizados"
+        tools:layout="@layout/fragment_finalizado">
+        <action
+            android:id="@+id/action_nav_finalizado_to_gameDetailsFragment"
+            app:destination="@id/gameDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_AddGame"
+        android:name="com.example.gamevault.ui.AddGame.AddGameFragment"
+        android:label="Adicionar Jogo"
+        tools:layout="@layout/fragment_add_game" />
+
+    <fragment
+        android:id="@+id/userProfileFragment"
+        android:name="com.example.gamevault.ui.userProfile.UserProfileFragment"
+        android:label="Perfil do Usuário"
+        tools:layout="@layout/fragment_user_profile" />
+
+    <activity
+        android:id="@+id/addReviewActivity"
+        android:name="com.example.gamevault.ui.AddReviewActivity"
+        android:label="Adicionar Avaliação"
+        tools:layout="@layout/activity_add_review" />
 </navigation>
