--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,58 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".login.Register">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+  <data></data>
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      android:padding="16dp">
 
-  <EditText
-      android:id="@+id/editTextUsername"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:hint="Usuário"
-      android:contentDescription="Campo para usuário"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      android:layout_marginTop="32dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginEnd="32dp"/>
+    <EditText
+        android:id="@+id/editTextUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nome de usuário" />
 
-  <EditText
-      android:id="@+id/editTextEmail"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:hint="E-mail"
-      android:contentDescription="Campo para e-mail"
-      android:inputType="textEmailAddress"
-      app:layout_constraintTop_toBottomOf="@id/editTextUsername"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      android:layout_marginTop="16dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginEnd="32dp"/>
+    <EditText
+        android:id="@+id/editTextEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email" />
 
-  <EditText
-      android:id="@+id/editTextPassword"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:hint="Senha"
-      android:contentDescription="Campo para senha"
-      android:inputType="textPassword"
-      app:layout_constraintTop_toBottomOf="@id/editTextEmail"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      android:layout_marginTop="16dp"/>
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Senha"
+        android:inputType="textPassword" />
 
-  <Button
-      android:id="@+id/buttonRegister"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:text="Registrar"
-      android:contentDescription="Botão para registrar"
-      app:layout_constraintTop_toBottomOf="@id/editTextPassword"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      android:layout_marginTop="16dp"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/buttonRegister"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registrar" />
+  </LinearLayout>
+</layout>
